[package]
name = "rsrem"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.11"
curl = "0.4.46"
dns-lookup = "2.0.4"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.0.0"
ipaddress = "0.1.3"
itertools = "0.12.1"
log = "0.4.20"
minijinja = { version = "1.0.12", features = ["unicode"] }
openssl = { version = "0.10.64", features = ["v110"] }
pest = "2.7.7"
ping-rs = "0.1.2"
regex = "1.10.3"
russh = "0.42.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smol = "2.0.0"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
time = "0.3.34"
toml = "0.8.10"
