[package]
name = "rsrem"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
bytes = { version = "1.5.0", features = ["serde"] }
compact_str = "0.7.1"
config = "0.14.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.11"
curl = "0.4.46"
dns-lookup = "2.0.4"
flexi_logger = { version = "0.27.4", features = ["async"] }
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.0.0"
hyper = "1.2.0"
ipaddress = "0.1.3"
itertools = "0.12.1"
log = "0.4.20"
minijinja = { version = "1.0.12", features = ["unicode"] }
openssl = { version = "0.10.64", features = ["v110"] }
pest = "2.7.7"
ping-rs = "0.1.2"
regex = "1.10.3"
reqwest = "0.11.24"
russh = "0.42.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simplelog = "0.12.1"
smallvec = "1.13.1"
smol = "2.0.0"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
structured-logger = "1.0.3"
syn = "2.0.50"
thiserror = "1.0.57"
time = "0.3.34"
tiny_http = "0.12.0"
toml = "0.8.10"
uninit = "0.6.2"
ureq = "2.9.6"
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.4.0"
warp = "0.3.6"
